--- a/html/popup.html
+++ b/html/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../css/popup.css" />
-    <title>Chrome插件基础demo</title>
+    <title>Chrome插件基础demo-lwcs</title>
   </head>
   <body>
     <div class="hello"></div>
