add: 修改成截图工具

--- a/html/popup.html
+++ b/html/popup.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../css/popup.css" />
-    <title>Chrome插件基础demo-lwcs</title>
+    <title>Chrome浏览器截图--lwcs</title>
   </head>
   <body>
-    <div class="hello"></div>
-    <div id="logList" class="logList"></div>
+    <div class="hello">
+      <input id="button" type="button" value="点击" > 
+      <img id="screenshotImg" src="../images/icon.png"> 
+    </div>
+    <!-- <div id="logList" class="logList"></div>
     <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/popup.js"></script>
+    <script src="../js/popup.js"></script> -->
+    <script src="../js/screensort.js"></script> 
   </body>
 </html>
