截图代码完善

--- a/html/popup.html
+++ b/html/popup.html
@@ -7,12 +7,11 @@
   </head>
   <body>
     <div class="hello">
-      <input id="button" type="button" value="点击" > 
+      <input id="button" type="button" value="截取可见区域" > 
       <img id="screenshotImg" src="../images/icon.png"> 
     </div>
-    <!-- <div id="logList" class="logList"></div>
+    <div id="logList" class="logList"></div>
     <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/popup.js"></script> -->
-    <script src="../js/screensort.js"></script> 
+    <script src="../js/popup.js"></script>
   </body>
 </html>
