--- a/html/popup.html
+++ b/html/popup.html
@@ -1,17 +1,83 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../css/popup.css" />
     <title>Chrome浏览器截图--lwcs</title>
-  </head>
-  <body>
-    <div class="hello">
-      <input id="button" type="button" value="截取可见区域" > 
-      <img id="screenshotImg" src="../images/icon.png"> 
+</head>
+
+<body>
+    <div id="screensort-menu" class="contextmenu screensort-menu">
+        <li id="screensort-outer">
+            <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                <tbody>
+                    <tr>
+                        <td style="width: 25px;">&nbsp;</td>
+                        <td class="menu-text"><input class="menu-text-btn" id="screensort" type="button" value="截取可见区域"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </li>
+        <li id="longScreensort-outer">
+            <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                <tbody>
+                    <tr>
+                        <td style="width: 25px;">&nbsp;</td>
+                        <td class="menu-text"><input class="menu-text-btn" id="longScreensort" type="button" value="截取滚动区域"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </li>
+        <li id="pathScreensortFileName-outer">
+            <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                <tbody>
+                    <tr>
+                        <td style="width: 25px;">&nbsp;</td>
+                        <td class="menu-text"><input class="menu-text-btn" id="pathScreensort" type="button" value="截取部分区域"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </li>
+        <li id="get-all-image-outer">
+            <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                <tbody>
+                    <tr>
+                        <td style="width: 25px;">&nbsp;</td>
+                        <td class="menu-text"><input class="menu-text-btn" id="getAllImage" type="button" value="获取全部图片"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </li>
     </div>
-    <div id="logList" class="logList"></div>
-    <script src="../js/jquery-3.6.0.min.js"></script>
+    <!-- <div class="screen">
+        <div class="top box">
+            <div class="left">
+                <input id="screensort" type="button" value="截取可见区域">
+            </div>
+            <div class="right">
+                <input id="screensortFileName">
+            </div>
+        </div>
+        <div class="center interval box">
+            <div class="left">
+                <input id="longScreensort" type="button" value="截取滚动区域">
+            </div>
+            <div class="right">
+                <input id="longScreensortFileName">
+            </div>
+            
+        </div>
+        <div class="bottom interval box">
+            <div class="left">
+                <input id="pathScreensort" type="button" value="截取部分区域">
+            </div>
+            <div class="right">
+                <input id="pathScreensortFileName">
+            </div>
+        </div>
+    </div> -->
     <script src="../js/popup.js"></script>
-  </body>
+</body>
+
 </html>
